@@ -467,11 +467,12 @@ class ApiMain extends ApiBase {
 	} 
 
 	private $mIsBot = null;
-	
 	private $mIsSysop = null;
+	private $mCanApiHighLimits = null;
 	
 	/**
 	 * Returns true if the currently logged in user is a bot, false otherwise
+	 * OBSOLETE, use canApiHighLimits() instead
 	 */
 	public function isBot() {
 		if (!isset ($this->mIsBot)) {
@@ -484,6 +485,7 @@ class ApiMain extends ApiBase {
 	/**
 	 * Similar to isBot(), this method returns true if the logged in user is
 	 * a sysop, and false if not.
+	 * OBSOLETE, use canApiHighLimits() instead
 	 */
 	public function isSysop() {
 		if (!isset ($this->mIsSysop)) {
@@ -492,6 +494,15 @@ class ApiMain extends ApiBase {
 		}
 
 		return $this->mIsSysop;
+	}
+	
+	public function canApiHighLimits() {
+		if (!is_null ($this->mCanApiHighLimits)) {
+			global $wgUser;
+			$this->mCanApiHighLimits = $wgUser->isAllowed('apihighlimits');
+		}
+
+		return $this->mCanApiHighLimits;
 	}
 
 	public function getShowVersions() {
